# animerecommendationengine

./: .replit  README.md  animate_initalizing.py  app.py  authorization of autho2.py  check_Exist.py  genre_testing.py  genres.json  get_genre.py  info.json  load_data_to_class.py  missinggenre.json  modified_anime_initalizing_api3.py  pyproject.toml  read_database.py  services.py  tes.py  test_genre.py  totalAnime.pickle  total_number_anime.py  uncategorize_anime.py  update.py  user_initalize.py  webid.pickle
