[tool.poetry]
name = "animerecommendation-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-wtf = "^0.14.3"
flask-bootstrap = "^3.3.7"
lxml = "^4.6.2"
werkzeug = "^1.0.1"
flask-login = "^0.5.0"
email-validator = "^1.1.2"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
sqlalchemy = "^1.3.22"
bs4 = "^0.0.1"
pandas = "^1.1.5"
wtforms = "^2.3.3"
flask-mail = "^0.9.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
